--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=PT+Serif:700" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     
 </head>
     
